---
source: tests/cli.rs
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
input_file: tests/inputs/err_type_mixed.py
---
STDOUT
STDERR
error[invalid-return-type]: Return type does not match returned value
 --> err_type_mixed.py:8:40
  |
8 | def with_type_error(x: int, y: int) -> int:
  |                                        --- Expected `int` because of return type
9 |     return "string"  # Type error: returning str instead of int
  |            ^^^^^^^^ expected `int`, found `Literal["string"]`
  |
info: rule `invalid-return-type` is enabled by default

Found 1 diagnostic
